描述长度限制

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -4,7 +4,7 @@
     <version>1.0</version>
     <vendor email="763263311@qq.com" url="https://github.com/duoluo9">duoluo9</vendor>
 
-    <description><![CDATA[BaseLibraryPlugin<br>]]></description>
+    <description><![CDATA[BaseLibraryPluginBaseLibraryPluginBaseLibraryPluginBaseLibraryPlugin<br>]]></description>
 
     <change-notes><![CDATA[
       1.0<br>
